commented out the outlines property that was used to identify overflow issues:)

--- a/styles/general.css
+++ b/styles/general.css
@@ -25,10 +25,9 @@
   list-style: none;
   box-sizing: border-box;
   border: none;
+  /* outline: 1px solid red; */
 }
-* {
-  outline: 1px solid red;
-}
+
 @font-face {
   font-family: "Jakarta-B";
   src: url(../assets/fonts/PlusJakartaSans-Bold.ttf);
